--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "19.2.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "viem": "^2.43.3",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
