--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "NEXT_DISABLE_TURBOPACK=1 next build",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -16,7 +16,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
-    "next": "16.0.10",
+    "next": "16.1.1",
     "postcss": "^8.5.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
@@ -31,7 +31,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.10",
+    "eslint-config-next": "16.1.1",
+    "null-loader": "^4.0.1",
     "tailwindcss": "^4.1.18",
     "typescript": "^5"
   }
